import Foundation

//MARK: - Identifiers for cells
enum CellsIdentifiers: String {
    case header = "header"
    case profile = "profile"
    case contact = "contact"
    case job = "job"
    case skill = "skill"
    case education = "education"
}

//MARK: - Accessibility identifiers for cells
enum AccessibilityIdentifiers: String {
    case section_profile = "cell_section_profile_id"
    case section_contact = "cell_section_contact_id"
    case section_experience = "cell_section_experience_id"
    case section_skills = "cell_section_skills_id"
    case section_education = "cell_section_education_id"
    case detail_name = "cell_detail_name_id"
    case detail_surname = "cell_detail_surname_id"
    case detail_age = "cell_detail_age_id"
    case detail_nationality = "cell_detail_nationality_id"
    case contact_mail = "cell_contact_mail_id"
    case contact_phone = "cell_contact_phone_id"
    case contact_web = "cell_contact_web_id"
    case cell_experience = "cell_experience_id"
    case cell_skills = "cell_skills_id"
    case cell_education = "cell_education_id"
}
